FUSE-150 : [BE] Dynamic discovery of JDBC connectors on PDI side